db845c: Add rb5 support in db845c-userdebug build target
* Enabled multile appended DTBs support to allow db845c
boot.img/vendor_boot.img to boot on rb5 as well.

* Introduced a vendor.hw property which will be used to run
device specific services. e.g. setting correct HDMI mixer
control to begin with.

TODO: Figure out the correct way to set mixer control paths
in mixer_path.xml based on the device card names
(/proc/asound/cards). Falling back to tinymix for the time
being.

Signed-off-by: Amit Pundir <amit.pundir@linaro.org>
Change-Id: I779d01946ae359d5c405d959419e29460083e5df

--- a/qcom/init.qcom.rc
+++ b/qcom/init.qcom.rc
@@ -1,3 +1,10 @@
+service set_hw /vendor/bin/set_hw.sh
+    class core
+    user root
+    group system
+    disabled
+    oneshot
+
 service qrtr-ns /vendor/bin/qrtr-ns -f 1
     class core
     user root
@@ -27,11 +34,18 @@ service rmtfs /vendor/bin/rmtfs -o /dev/block/platform/soc@0/1d84000.ufshc/by-na
     oneshot
 
 on early-init
+    start set_hw
     exec - root -- /vendor/bin/qrtr-cfg 1
     start qrtr-ns
 
 on post-fs
     start pd_mapper
+
+on late-fs && property:vendor.hw=db45c
+    exec - system audio -- /system/bin/tinymix "QUAT_MI2S_RX Audio Mixer MultiMedia1" 1
+
+on late-fs && property:vendor.hw=rb5
+    exec - system audio -- /system/bin/tinymix "TERT_MI2S_RX Audio Mixer MultiMedia1" 1
 
 on post-fs-data
     mkdir /data/vendor
