--- a/init.common.rc
+++ b/init.common.rc
@@ -12,6 +12,13 @@ on post-fs
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
 
+    # make sure remoteprocs have booted, some will attempt
+    # to start before firmware is available and not automatically
+    # retry.
+    write /sys/class/remoteproc/remoteproc0/state start
+    write /sys/class/remoteproc/remoteproc1/state start
+    write /sys/class/remoteproc/remoteproc2/state start
+
 on late-fs
     mount_all /vendor/etc/fstab.${ro.hardware} --late
 
